config/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trivial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opener__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opener</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trivial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Subject__c</columns>
        <columns>Priority__c</columns>
        <columns>Effort__c</columns>
        <columns>Closed__c</columns>
        <columns>Solved__c</columns>
        <columns>Opener__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TK-{0}</displayFormat>
        <label>Ticket Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>